// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstitutionalStatusField component should render default view 1`] = `
<GenericSelectField
  canUnselect={true}
  error={false}
  errorText=""
  genericSelectFieldId="rek-institutional-status"
  hideLabel={false}
  itemsList={
    Array [
      Object {
        "text": "Please choose an option",
        "value": null,
      },
      Object {
        "text": "UQ",
        "value": "453223",
      },
      Object {
        "text": "Non-UQ",
        "value": "453224",
      },
      Object {
        "text": "Unknown",
        "value": "453225",
      },
    ]
  }
  locale={
    Object {
      "label": undefined,
    }
  }
  value={Array []}
/>
`;

exports[`InstitutionalStatusField component should render immutable list as selected value with given field props 1`] = `
<GenericSelectField
  canUnselect={true}
  error={true}
  errorText="Test error"
  genericSelectFieldId="rek-institutional-status"
  hideLabel={false}
  input={
    Object {
      "onChange": [MockFunction],
      "value": Immutable.List [
        "One",
        "Two",
      ],
    }
  }
  itemsList={
    Array [
      Object {
        "text": "Please choose an option",
        "value": null,
      },
      Object {
        "text": "UQ",
        "value": "453223",
      },
      Object {
        "text": "Non-UQ",
        "value": "453224",
      },
      Object {
        "text": "Unknown",
        "value": "453225",
      },
    ]
  }
  label="Test label"
  locale={
    Object {
      "label": "Test label",
    }
  }
  meta={
    Object {
      "error": "Test error",
    }
  }
  onChange={[MockFunction]}
  placeholder="Test placeholder"
  value={
    Array [
      "One",
      "Two",
    ]
  }
/>
`;

exports[`InstitutionalStatusField component should render when given a default value field props 1`] = `
<GenericSelectField
  canUnselect={true}
  defaultValue="afr"
  error={false}
  errorText=""
  genericSelectFieldId="rek-institutional-status"
  hideLabel={false}
  itemsList={
    Array [
      Object {
        "text": "Please choose an option",
        "value": null,
      },
      Object {
        "text": "UQ",
        "value": "453223",
      },
      Object {
        "text": "Non-UQ",
        "value": "453224",
      },
      Object {
        "text": "Unknown",
        "value": "453225",
      },
    ]
  }
  label="Test label"
  locale={
    Object {
      "label": "Test label",
    }
  }
  placeholder="Test placeholder"
  value={
    Array [
      "afr",
    ]
  }
/>
`;

exports[`InstitutionalStatusField component should render with given field props 1`] = `
<GenericSelectField
  canUnselect={true}
  error={true}
  errorText="Test error"
  genericSelectFieldId="rek-institutional-status"
  hideLabel={false}
  input={
    Object {
      "onChange": [MockFunction],
      "value": Array [
        "One",
        "Two",
      ],
    }
  }
  itemsList={
    Array [
      Object {
        "text": "Please choose an option",
        "value": null,
      },
      Object {
        "text": "UQ",
        "value": "453223",
      },
      Object {
        "text": "Non-UQ",
        "value": "453224",
      },
      Object {
        "text": "Unknown",
        "value": "453225",
      },
    ]
  }
  label="Test label"
  locale={
    Object {
      "label": "Test label",
    }
  }
  meta={
    Object {
      "error": "Test error",
    }
  }
  onChange={[MockFunction]}
  placeholder="Test placeholder"
  value={
    Array [
      "One",
      "Two",
    ]
  }
/>
`;
